<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_title_join">회원가입</string>
    <string name="add_tag">Add Tag</string>
    <string name="all_image">All Images</string>
    <string name="app_name">Fitts</string>
    <string name="app_sub_name">내게 딱 맞는 핏을 찾다</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_fit_dialog_done">확인</string>
    <string name="auth_code_cancel">Pressed back button or disagree button during requesting auth code.</string>
    <string name="auth_fail_msg">본인인증에 실패했어요��\10다시 시도해주세요.</string>
    <string name="auth_text_desc">*주민번호는 암호화 처리되며 별도 저장되지 않습니다.</string>
    <string name="auth_text_need_ssn">주민번호를 완성해주세요</string>
    <string name="auth_text_ssn">주민번호</string>
    <string name="body_type_hourglass_desc">다른 곳에 비해 허리가\10많이 잘록한 편</string>
    <string name="body_type_inverted_triangle_desc">하체에 비해\10상체가 발달한 편</string>
    <string name="body_type_normal_desc">상하체가\10균형있고 평범한 편</string>
    <string name="body_type_rectangle_desc">전체적으로 몸과\10팔다리가 가는 편</string>
    <string name="body_type_triangle_desc">상체에 비해\10하체가 발달한 편</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_for_ssl_go_back">Back</string>
    <string name="button_for_ssl_go_forward">Continue</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">close</string>
    <string name="com.crashlytics.android.build_id">d3d727af-2a5d-4e04-a5ab-adbf6188ed99</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_kakao_account_cancel">Cancel</string>
    <string name="com_kakao_account_cancel_tts">Cancel, Button</string>
    <string name="com_kakao_alert_appKey">need to declare com.kakao.sdk.AppKey in your AndroidManifest.xml</string>
    <string name="com_kakao_alert_install_kakaotalk">Please update KakaoTalk to the latest version.</string>
    <string name="com_kakao_alert_uri_too_long">Failed to send message because it exceeds the message size limit. Please contact the app administrator.</string>
    <string name="com_kakao_cancel_button">Cancel</string>
    <string name="com_kakao_confirm_logout">Are you sure to log out from this app?</string>
    <string name="com_kakao_confirm_unlink">Are you sure to unlink from this app?</string>
    <string name="com_kakao_kakaostory_account">with KakaoStory</string>
    <string name="com_kakao_kakaostory_account_tts">with KakaoStory, Button</string>
    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_kakaotalk_account_tts">with KakaoTalk, Button</string>
    <string name="com_kakao_login_button">Log in with KakaoAccount</string>
    <string name="com_kakao_login_button_tts">Log in with KakaoAccount, Button</string>
    <string name="com_kakao_login_image_tts">Login with KakaoAccount, Image</string>
    <string name="com_kakao_logout_button">Log out</string>
    <string name="com_kakao_ok_button">OK</string>
    <string name="com_kakao_other_kakaoaccount">with another KakaoAccount</string>
    <string name="com_kakao_other_kakaoaccount_tts">with another KakaoAccount, Button</string>
    <string name="com_kakao_profile_nickname">Nickname</string>
    <string name="com_kakao_profile_userId">Kakao User ID</string>
    <string name="com_kakao_talk_chooser_text">Which version of KakaoTalk would you like to use?</string>
    <string name="com_kakao_tokeninfo_button">Token Info</string>
    <string name="com_kakao_unlink_button">Unlink</string>
    <string name="comment_delete">삭제</string>
    <string name="comment_report">신고</string>
    <string name="comment_report_sub1">욕설 또는 인신공격적인 내용</string>
    <string name="comment_report_sub2">스팸 또는 사기성 내용</string>
    <string name="comment_report_title">댓글 신고 이유를 알려주세요</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="core_com_kakao_sdk_loading">Loading…</string>
    <string name="coupon_usage_detail_completed_detail_message">배송관련, 교환 및 환불, 기타 문의는 카카오톡 플러스친구 \'핏츠\'를 통해 1:1 대화로 문의해 주세요</string>
    <string name="coupon_usage_detail_completed_message">배송은 평균 2~3일이 소요되나 쇼핑몰의 사정에 따라 달라질 수 있어요.</string>
    <string name="coupon_usage_detail_completed_title">신청하신 상품의 주문이 완료되었어요.</string>
    <string name="coupon_usage_detail_pending_detail_message">신청취소는 주문완료 알림을 받기 전까지만 가능해요.\10\10기타 궁금하신 사항은 카카오톡 플러스친구 \'핏츠\'를 통해\101:1 대화로 문의해 주세요</string>
    <string name="coupon_usage_detail_pending_message">신청하신 상품에 대한 구매가 완료되면 푸시알림을 통해 바로 알려드리겠습니다.</string>
    <string name="coupon_usage_detail_pending_title">쿠폰 사용신청이 완료되었어요.</string>
    <string name="coupon_usage_detail_rejected_message">안타깝게도 쿠폰 사용 신청이\10아래와 같은 사유로 반려되었습니다.</string>
    <string name="post_declaration">신고</string>
    <string name="post_modify">포스트 수정</string>
    <string name="post_product_price">구매가격</string>
    <string name="post_product_size">구매사이즈</string>
    <string name="post_product_store">구매한 곳</string>
    <string name="post_share_facebook">Facebook에 공유</string>
    <string name="post_share_kakao">카카오톡에 공유</string>
    <string name="post_share_link">링크 복사</string>
</resources>