<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/dialog" android:layout_width="306dp" android:layout_height="wrap_content">
    <TextView android:textSize="17sp" android:textStyle="bold" android:textColor="@color/gray6" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:text="@string/comment_report_title" android:paddingStart="24dp" android:paddingEnd="24dp"/>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="24dp" android:layout_below="@+id/dialog_title" android:paddingStart="24dp" android:paddingEnd="24dp">
        <View android:background="@color/gray1" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <TextView android:id="@+id/comment_report1" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/comment_report_sub1"/>
        <View android:background="@color/gray1" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <TextView android:id="@+id/comment_report2" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/comment_report_sub2"/>
        <View android:background="@color/gray1" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    </LinearLayout>
</RelativeLayout>
