<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:id="@+id/modifyPostLayout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:id="@+id/modify_post_image" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/button_home_postwrite" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:id="@+id/modify_post_image_text" android:layout_width="wrap_content" android:layout_height="22dp" android:text="@string/post_modify" android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/modify_post_image" app:layout_constraintTop_toTopOf="@+id/modify_post_image"/>
        <View android:background="@color/gray1" android:layout_width="0dp" android:layout_height="0.5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:id="@+id/deletePostLayout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:id="@+id/deletePostImageView" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/btn_delete" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:id="@+id/deletePostTextView" android:layout_width="wrap_content" android:layout_height="22dp" android:text="삭제" android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/deletePostImageView" app:layout_constraintTop_toTopOf="@+id/deletePostImageView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/share_facebook" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:id="@+id/share_facebook_image" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/share_facebook" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="22dp" android:text="@string/post_share_facebook" android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/share_facebook_image" app:layout_constraintTop_toTopOf="@+id/share_facebook_image"/>
        <View android:background="@color/gray1" android:layout_width="0dp" android:layout_height="0.5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:id="@+id/share_kakao" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:id="@+id/share_kakao_image" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/share_kakao" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="22dp" android:text="@string/post_share_kakao" android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/share_kakao_image" app:layout_constraintTop_toTopOf="@+id/share_kakao_image"/>
        <View android:background="@color/gray1" android:layout_width="match_parent" android:layout_height="0.5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:id="@+id/share_link" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:id="@+id/share_link_image" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/share_link" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="22dp" android:text="@string/post_share_link" android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/share_link_image" app:layout_constraintTop_toTopOf="@+id/share_link_image"/>
        <View android:background="@color/gray1" android:layout_width="match_parent" android:layout_height="0.5dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/declaration_post" android:layout_width="match_parent" android:layout_height="65dp" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:gravity="center_vertical" android:id="@+id/declaration_post_image" android:layout_width="22dp" android:layout_height="22dp" android:src="@drawable/declaration_post"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray6" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="22dp" android:text="@string/post_declaration" android:layout_marginStart="12dp" android:layout_toEndOf="@+id/declaration_post_image"/>
    </RelativeLayout>
</LinearLayout>
