<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="14sp" android:textColor="@color/gray6" android:id="@+id/textBuyInfoTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="구매한 상품" android:fontFamily="@font/kopubdotum_pro_medium" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <View android:id="@+id/viewRound" android:background="@drawable/grid_rounded" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="15dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textBuyInfoTitle"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/post_product" android:paddingTop="16dp" android:paddingBottom="16dp" android:clipToPadding="false" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textBuyInfoTitle">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layoutBuyProduct" android:layout_width="0dp" android:layout_height="71dp" android:layout_marginTop="16dp" android:layout_marginStart="17dp" app:layout_constraintEnd_toStartOf="@+id/post_product_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="12sp" android:textColor="@color/gray5" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_store" android:fontFamily="@font/kopubdotum_pro_medium"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray5" android:padding="5dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_price" android:fontFamily="@font/kopubdotum_pro_medium"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray5" android:id="@+id/postProductSizeLabel" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_size" android:fontFamily="@font/kopubdotum_pro_medium"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15dp">
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/post_product_shop" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/kopubdotum_pro_medium"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/post_product_price" android:padding="5dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/kopubdotum_pro_medium"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/post_product_size" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/kopubdotum_pro_medium"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/post_product_image" android:layout_width="71dp" android:layout_height="71dp" android:layout_marginEnd="17dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/layoutBuyProduct"/>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/layoutFittsStoreMark" android:background="@drawable/img_talk_bubble_point" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:layout_marginEnd="10dp" app:layout_constraintBottom_toTopOf="@+id/post_product_image" app:layout_constraintEnd_toEndOf="0">
            <ImageView android:layout_width="12dp" android:layout_height="14dp" android:src="@drawable/icon_fitts_store_bag" android:layout_marginEnd="3dp"/>
            <TextView android:textSize="11sp" android:textColor="@color/point" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="핏츠 스토어" android:fontFamily="@font/kopubdotum_pro_bold"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
