<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <View android:id="@+id/itemSeparatorLine" android:background="@color/gray2" android:layout_width="0dp" android:layout_height="0.5dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/profileInfoLayout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="34dp" android:layout_marginStart="24dp" android:layout_marginEnd="26dp" app:layout_constraintEnd_toStartOf="@+id/profileImageView" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/itemSeparatorLine">
        <TextView android:textSize="19sp" android:textStyle="bold" android:textColor="@color/gray6" android:ellipsize="end" android:id="@+id/titleTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:maxLines="2" android:lineSpacingMultiplier="1.2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="14sp" android:textStyle="normal|bold|italic" android:textColor="@color/gray3" android:id="@+id/byTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="by" android:fontFamily="@font/proxima_nova_bold_italic" app:layout_constraintStart_toStartOf="@+id/titleTextView" app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
        <TextView android:textSize="14sp" android:textStyle="normal|bold|italic" android:textColor="@color/gray5" android:id="@+id/fittsIDTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:fontFamily="@font/proxima_nova_bold_italic" android:layout_marginStart="6dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/byTextView" app:layout_constraintTop_toTopOf="@+id/byTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/profileImageView" android:layout_width="54dp" android:layout_height="54dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="@+id/profileInfoLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/profileInfoLayout" app:layout_constraintVertical_bias="0.5"/>
    <View android:id="@+id/profileImageViewOutline" android:background="@drawable/background_profile" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/profileImageView" app:layout_constraintEnd_toEndOf="@+id/profileImageView" app:layout_constraintStart_toStartOf="@+id/profileImageView" app:layout_constraintTop_toTopOf="@+id/profileImageView"/>
    <View android:id="@+id/profileImageClickEventView" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/profileImageView" app:layout_constraintEnd_toEndOf="@+id/profileImageView" app:layout_constraintStart_toStartOf="@+id/profileImageView" app:layout_constraintTop_toTopOf="@+id/profileImageView"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@+id/postDetailLayout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/profileInfoLayout">
        <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/postImagesRecyclerView" android:clipToPadding="false" android:layout_width="0dp" android:layout_height="153dp" android:paddingStart="24dp" android:paddingEnd="24dp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/doubleQuotesImageView" android:layout_width="17dp" android:layout_height="14dp" android:layout_marginTop="14dp" android:src="@drawable/quotes_img" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/postImagesRecyclerView"/>
        <TextView android:textSize="13sp" android:textColor="@color/gray6" android:ellipsize="end" android:id="@+id/descriptionTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:maxLines="2" android:lineSpacingMultiplier="1.2" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/doubleQuotesImageView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout android:id="@+id/productInfoLayout" android:background="@drawable/grid_rounded" android:paddingLeft="17dp" android:paddingTop="13dp" android:paddingRight="17dp" android:paddingBottom="13dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/postDetailLayout">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toStartOf="@+id/productImageView">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="12sp" android:textColor="@color/gray3" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_store"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray3" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_price"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray3" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post_product_size"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="15dp">
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/shopNameTextView" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/priceTextView" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView android:textSize="12sp" android:textColor="@color/gray6" android:id="@+id/sizeTextView" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/productImageView" android:layout_width="71dp" android:layout_height="71dp" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <Space android:layout_width="0dp" android:layout_height="34dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/productInfoLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
